# oscope

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  customvideosurface.cpp  customvideosurface.hpp  icon.rc  main.cpp  main.qml  qml.qrc  runbuild.sh  scope.cpp  scope.hpp  socket.cpp  socket.hpp  stream.cpp  stream.hpp
cmake/: Icons.cmake
resources/: oscope.desktop
src/: customvideosurface.cpp  discovery.cpp  discovery.hpp  main.cpp  scope.cpp  scope.hpp  socket.cpp
